Update: Made changes to app

--- a/templates/add_team.html
+++ b/templates/add_team.html
@@ -13,7 +13,7 @@
         <option>HDB Inter-Group 200m Women</option>
         <option>HDB Inter-Group 200m Mixed</option>
         <option>HDB Inter-Group 200m Veteran-Mixed</option>
-        <option>ClubHDB Inter-Group 100m Sprint Open</option>
+        <option>HDB Inter-Group 100m Sprint Open</option>
     </select><br>
 
     <label for="department">Agency/Group</label><br>
