--- a/templates/category_draw.html
+++ b/templates/category_draw.html
@@ -11,7 +11,7 @@
 ] %}
 
 {% set numbered_final_categories = [
-    "ClubHDB Inter-Group 100m Sprint Open"
+    "HDB Inter-Group 100m Sprint Open"
 ] %}
 
 {% if not drawn %}
