--- a/templates/lane_draw.html
+++ b/templates/lane_draw.html
@@ -3,7 +3,7 @@
 <h1>Lane Draw Overview</h1>
 
 {% set finals_categories = [
-    "ClubHDB Inter-Group 100m Sprint Open",
+    "HDB Inter-Group 100m Sprint Open",
     "MND Inter-Agency 200m Women",
     "MND Inter-Agency 200m Open",
     "MND Inter-Agency 200m Minister's Challenge Mixed",
